# Bookie

./: .gitignore  README.md  package-lock.json
.next/: trace
contracts/: DEPLOYMENT_STATUS.md
contracts/bookie/: Cargo.toml  README.md  deploy.sh  deploy_ready.sh  test.sh  test_contract.sh
contracts/bookie/.github/: copilot-instructions.md
contracts/bookie/.soroban/identity/: deployer-testnet.toml  deployer.toml  futurenet-deployer.toml  local-deployer.toml  testnet-deployer.toml  testnet-new.toml
contracts/bookie/.soroban/network/: testnet.toml
contracts/bookie/src/: contract.rs  simple_test.rs  test.rs
contracts/bookie001/: Cargo.toml
docs/: Contextfrontend.md  Development_Roadmap_Personal_Data_Marketplace.md  PDR_Personal_Data_Marketplace.md
frontend/: CONTRACT_ID_ERROR_FIXED.md  FINAL_PROJECT_STATUS.md  FINAL_STATUS_ALL_ISSUES_RESOLVED.md  FREIGHTER_DETECTION_ENHANCED.md  FREIGHTER_INTEGRATION.md  FREIGHTER_INTEGRATION_COMPLETE.md  FREIGHTER_STATUS.md  FREIGHTER_TRANSACTION_FIX_COMPLETE.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUCCESS.md  KURULUM_TAMAMLANDI.md  MARKETPLACE_VAULT_PURCHASE_FIXED.md  PROJECT_STATUS_COMPLETED.md  PURCHASE_FLOW_RESOLVED.md  RPC_ERRORS_FIXED_FINAL.md  RUNTIME_ERROR_FIXED.md  SELL_TO_MARKETPLACE_FIXED.md  TRANSACTION_ERROR_RESOLVED.md  WALLET_CONNECTION_FIXED.md  next.config.mjs  package.json  test-purchase-flow.js  tsconfig.tsbuildinfo  verify-freighter.sh
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: freighter-test.tsx  header.tsx  layout-wrapper.tsx  opening-scene.tsx  wallet-connect.tsx  (+1 more)
(+46 files in other folders)
