[package]
name = "bookie"
version = "1.0.0"
edition = "2021"
description = "Bookie Data Marketplace - Stellar Soroban Smart Contract"
authors = ["Bookie Team"]

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "21.1.1", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "21.1.1", features = ["testutils"], default-features = false }

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
